# Shortumation

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.json  config.yaml  docker-compose.build.yaml  docker-compose.test.yaml  docker-compose.yaml  logo.png~  renovate.json  repository.yaml  run.sh
api/: .env.api  .gitignore  .vulture_whitelist  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py  tmp.db  web
api/src/: app.py  config.py  db.py  env.py  errors.py  json_serializer.py  logger.py  main.py  user_profile.py  utils.py
api/src/api/: __main__.py  app.py  config.py  ping.py  types.py
api/src/api/routes/: automations.py  details.py  ping.py  search.py  socket.py
api/src/api/search/: __init__.py  types.py
api/src/automations/: AutomationLoader.py  __init__.py  db.py  deparser.py  errors.py  loader.py  manager.py  parsers.py  tags.py  types.py
api/src/automations_v2/: automation_watcher.py  db.py  errors.py  loader.py  manager.py  tags.py  types.py  watcher.py
api/src/config/: AutomationLoader.py  HassSafeConstructor.py  __init__.py  configuration_parser.py  globals.py
api/src/db/: connection.py  entities.py
api/src/hass_config/: __init__.py  errors.py  loader.py
api/src/ws_redirect/: __init__.py
api/src/yaml_serializer/: HassSafeConstructor.py  HassYaml.py  __init__.py  base_yaml.py  dumper.py  loader.py  manager.py  types.py
api/tests/: utils.py
api/tests/unittests/: test_config.py  test_db.py  test_json_s.py  test_json_serializer.py  test_yaml.py  test_yaml_serializer.py
(+681 files in other folders)
